# algokit-core

./: .gitignore  AK-452-enhanced-applicationcall-with-abi.md  Cargo.toml  FINAL_ACTION_PLAN.md  README.md  STABILIZATION_TODO.md  backwards_compatibility_analysis.md  package.json
crates/algod_api/: Cargo.toml
crates/algod_api/src/: lib.rs
crates/algod_client/: Cargo.toml  README.md
crates/algod_client/src/: lib.rs  msgpack_string_bytes.rs  msgpack_value_bytes.rs
crates/algod_client/src/apis/: abort_catchup.rs  account_application_information.rs  account_asset_information.rs  account_assets_information.rs  account_information.rs  add_participation_key.rs  append_keys.rs  client.rs  configuration.rs  default_api.rs  delete_participation_key_by_i_d.rs  delete_participation_key_by_id.rs  experimental_check.rs  generate_participation_keys.rs  get_application_box_by_name.rs  get_application_boxes.rs  get_application_by_i_d.rs  get_application_by_id.rs  get_asset_by_i_d.rs  get_asset_by_id.rs  get_block.rs  get_block_hash.rs  get_block_logs.rs  get_block_time_stamp_offset.rs  get_block_txids.rs  get_config.rs  get_debug_settings_prof.rs  get_genesis.rs  get_ledger_state_delta.rs  get_ledger_state_delta_for_transaction_group.rs  get_light_block_header_proof.rs  get_participation_key_by_i_d.rs  get_participation_key_by_id.rs  get_participation_keys.rs  get_pending_transactions.rs  get_pending_transactions_by_address.rs  get_ready.rs  get_state_proof.rs  get_status.rs  get_supply.rs  (+24 more)
crates/algod_client/src/models/: abort_catchup200_response.rs  account.rs  account_application_information.rs  account_application_information200_response.rs  account_asset_holding.rs  account_asset_information.rs  account_asset_information200_response.rs  account_assets_information200_response.rs  account_participation.rs  account_state_delta.rs  add_participation_key200_response.rs  app_call_logs.rs  application.rs  application_eval_delta.rs  application_initial_states.rs  application_k_v_storage.rs  application_kv_storage.rs  application_local_reference.rs  application_local_state.rs  application_params.rs  application_state_operation.rs  application_state_schema.rs  asset.rs  asset_holding.rs  asset_holding_reference.rs  asset_params.rs  avm_key_value.rs  avm_value.rs  block.rs  block_account_state_delta.rs  block_app_eval_delta.rs  block_eval_delta.rs  block_state_delta.rs  block_state_proof_tracking.rs  block_state_proof_tracking_data.rs  box_descriptor.rs  box_reference.rs  build_version.rs  debug_settings_prof.rs  dryrun_request.rs  (+68 more)
crates/algod_client_ffi/: Cargo.toml  README.md
crates/algod_client_ffi/src/: lib.rs
crates/algod_client_ffi/src/apis/: abort_catchup.rs  account_application_information.rs  account_asset_information.rs  account_assets_information.rs  account_information.rs  add_participation_key.rs  append_keys.rs  client.rs  delete_participation_key_by_id.rs  experimental_check.rs  generate_participation_keys.rs  get_application_box_by_name.rs  get_application_boxes.rs  get_application_by_id.rs  get_asset_by_id.rs  get_block.rs  get_block_hash.rs  get_block_logs.rs  get_block_time_stamp_offset.rs  get_block_txids.rs  get_config.rs  get_debug_settings_prof.rs  get_genesis.rs  get_ledger_state_delta.rs  get_ledger_state_delta_for_transaction_group.rs  get_light_block_header_proof.rs  get_participation_key_by_id.rs  get_participation_keys.rs  get_pending_transactions.rs  get_pending_transactions_by_address.rs  get_ready.rs  get_state_proof.rs  get_status.rs  get_supply.rs  get_sync_round.rs  get_transaction_group_ledger_state_deltas_for_round.rs  get_transaction_proof.rs  get_version.rs  health_check.rs  metrics.rs  (+18 more)
crates/algod_client_ffi/src/models/: abort_catchup.rs  account.rs  account_application_information.rs  account_asset_holding.rs  account_asset_information.rs  account_assets_information.rs  account_participation.rs  account_state_delta.rs  add_participation_key.rs  app_call_logs.rs  application.rs  application_initial_states.rs  application_kv_storage.rs  application_local_reference.rs  application_local_state.rs  application_params.rs  application_state_operation.rs  application_state_schema.rs  asset.rs  asset_holding.rs  asset_holding_reference.rs  asset_params.rs  avm_key_value.rs  avm_value.rs  block.rs  block_account_state_delta.rs  block_app_eval_delta.rs  block_eval_delta.rs  block_state_proof_tracking.rs  block_state_proof_tracking_data.rs  box_descriptor.rs  box_model.rs  box_reference.rs  build_version.rs  debug_settings_prof.rs  dryrun_request.rs  dryrun_source.rs  dryrun_state.rs  dryrun_txn_result.rs  error_response.rs  (+50 more)
crates/algod_client_tests/: Cargo.toml  README.md
crates/algod_client_tests/src/: account_helpers.rs  fixtures.rs  lib.rs  localnet.rs  mnemonic.rs
crates/algod_client_tests/tests/: pending_transaction_information.rs  raw_transaction.rs  simulate_transactions.rs  transaction_params.rs
crates/algokit_http_client/: Cargo.toml
crates/algokit_http_client/src/: lib.rs
crates/algokit_transact_ffi/: Cargo.toml  build.rs  polytest.toml  test_data.json
crates/algokit_transact_ffi/src/: lib.rs  multisig.rs
crates/algokit_transact_ffi/src/transactions/: app_call.rs  application_call.rs  asset_config.rs  asset_freeze.rs  asset_transfer.rs  heartbeat.rs  key_registration.rs  keyreg.rs  mod.rs  payment.rs  state_proof.rs
crates/algokit_utils/: Cargo.toml
crates/algokit_utils/src/: algorand_client.rs  client_manager.rs  config.rs  constants.rs  lib.rs  multisig.rs  network_client.rs
crates/algokit_utils/src/applications/: app_deployer.rs
crates/algokit_utils/src/clients/: account_manager.rs  algorand_client.rs  app_manager.rs  asset_manager.rs  client_manager.rs  kmd_account_manager.rs  (+4 more)
crates/algokit_utils/tests/: common.rs  composer_tests.rs  payment.rs
crates/algokit_utils_ffi/: Cargo.toml  uniffi.toml
crates/algokit_utils_ffi/src/: lib.rs
crates/ffi_mutex/: Cargo.toml
crates/ffi_mutex/src/: lib.rs
rust_oas_generator/: README.md  pyproject.toml
rust_oas_generator/src/rust_oas_generator/: generate_rust_client.py
(+502 files in other folders)
