[workspace]
resolver = "2"
members = [
  "crates/algokit_http_client",
  "crates/algokit_transact",
  "crates/algokit_transact_ffi",
  "crates/algokit_utils",
  "crates/algokit_abi",
  "crates/algokit_test_artifacts",
  "crates/ffi_macros",
  "crates/algod_client",
  "crates/algod_client_ffi",
  "crates/indexer_client",
  "crates/kmd_client",
  "tools/build_pkgs",
  "crates/uniffi-bindgen",
  "docs",
  "tools/cargo-bin",
  "tools/api_tools", "crates/algokit_utils_ffi",
]

[workspace.dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", branch = "main" }
snafu = { version = "0.8" }
base32 = { version = "0.5.1" }
sha2 = { version = "0.10.8" }
rstest = { version = "0.25.0" }

[workspace.metadata.bin]
polytest = { version = "0.3.0", locked = true }
cargo-insta = { version = "1.43.1", locked = true }
