[package]
name = "algod_api"
version = "0.1.0"
edition = "2024"

[features]
default = ["default_http_client"]
default_http_client = ["algokit_http_client_trait/default_client"]


[dependencies]
algokit_http_client_trait = { version = "0.1.0", path = "../algokit_http_client_trait" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
