[package]
name = "algod_client"
version = "0.0.1"
authors = ["OpenAPI Generator"]
description = "API endpoint for algod operations."
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
# Core serialization
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde_bytes = "^0.11"

# HTTP client
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "multipart",
] }

# AlgoKit dependencies for msgpack and signed transactions
algokit_transact = { path = "../algokit_transact" }

# Error handling
thiserror = "^1.0"

# Utilities
base64 = "^0.22"
uuid = { version = "^1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "^0.4"
