[package]
name = "algod_client_ffi"
version = "0.0.1"
authors = ["AlgoKit Core Team"]
description = "API client for algod interaction."
license = "MIT"
edition = "2024"


[dependencies]
serde_json = "^1.0"

# Error handling
snafu = { workspace = true }

algokit_transact_ffi = { path = "../algokit_transact_ffi" }
uniffi = { workspace = true }
algokit_http_client = { path = "../algokit_http_client", default-features = false, features = ["ffi_uniffi"] }
algod_client = { path = "../algod_client" }
[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "^0.4"