[package]
name = "algod_client_tests"
version = "0.0.1"
authors = ["AlgoKit Core Team"]
description = "Integration tests for algod_client crate"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
# Test dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-test = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# Algod client under test
algod_client = { path = "../algod_client" }
algokit_transact = { path = "../algokit_transact", features = ["test_utils"] }

# Test fixtures and utilities
once_cell = "1.19"
base64 = "^0.22"
reqwest = "^0.12"
ed25519-dalek = "2.1"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
criterion = "0.5"