[package]
name = "algokit_http_client"
version = "0.1.0"
edition = "2024"

[features]
default_client = ["dep:reqwest"]

[dependencies]
async-trait = "0.1.88"
reqwest = { version = "0.12.19", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = { version = "0.6" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = { workspace = true }
