[package]
name = "algokit_transact_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
algokit_transact = { path = "../algokit_transact", features = ['test_utils'] }
ffi_macros = { path = "../ffi_macros" }

thiserror = { workspace = true }
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
base64 = "0.22.1"

pretty_assertions = "1.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
tsify-next = { workspace = true }
js-sys = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
]}

[dev-dependencies]
wasm-pack = "0.13.1"
uniffi = { workspace = true, features = ["bindgen-tests"] }

[build-dependencies]
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns", # Add the "scaffolding-ffi-buffer-fns" feature to make sure things can build correctly
] }
algokit_transact = { path = "../algokit_transact", features = ['test_utils'] }
ffi_macros = { path = "../ffi_macros" }
thiserror = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
base64 = "0.22.1"
tsify-next = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
