[package]
name = "algokit_utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["default_http_client"]
default_http_client = [
    "algokit_http_client/default_client",
    "algod_client/default_client",
]

[dependencies]
algod_client = { path = "../algod_client" }
algod_client_tests = { path = "../algod_client_tests" }
algokit_http_client = { version = "0.1.0", path = "../algokit_http_client", default-features = false }
algokit_transact = { version = "0.1.0", path = "../algokit_transact", features = [
    "test_utils",
] }
async-trait = { version = "0.1.88" }
base64 = "0.22.1"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.12.19", features = ["blocking"], optional = true }
thiserror.workspace = true
tokio = { version = "1.45.1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full", "test-util", "time"] }
