[package]
name = "ffi_mutex"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.1", default-features = false, features = ["sync"] }
uniffi = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen  = { workspace = true }

